fix context z-index

--- a/scss/cbplayer.scss
+++ b/scss/cbplayer.scss
@@ -627,7 +627,7 @@ audio{
 	background-color: $colorBackground;
 	padding-top: 5px;
 	padding-bottom: 5px;
-	z-index: 2;
+	z-index: 3;
 
 	&.cb-player-context-active{
 		display: block;
